# jaxwavelets

./: .coverage  .pre-commit-config.yaml  CLAUDE.md  LICENSE  PKGBUILD  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: benchmark_vs_pywt.py
docs/: api.rst  conf.py  index.rst
jaxwavelets/: _cwt.py
jaxwavelets/tests/: conftest.py  test_cwt.py  test_packets.py  test_swt.py  test_vmap_composability.py
jaxwt/: __init__.py  _cwt.py  _dwt.py  _filters.py  _fswt.py  _mra.py  _multidim.py  _packets.py  _swt.py  _thresholding.py
jaxwt/tests/: conftest.py  test_against_pywt.py  test_cwt.py  test_fswt.py  test_mra.py  test_packets.py  test_swt.py  test_thresholding.py  test_utilities.py  test_vmap_composability.py
scripts/: check_version.py
