[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxwt"
version = "0.1.0"
description = "JAX-native wavelet transforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Will Handley", email = "wh260@cam.ac.uk"},
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "PyWavelets",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "numpydoc",
]

[project.urls]
Repository = "https://github.com/handley-lab/jaxwt"
Documentation = "https://jaxwt.readthedocs.io"

[tool.setuptools.packages.find]
include = ["jaxwt*"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["jaxwt/tests"]
